--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   go_router: ^15.2.4
   flutter_svg: ^2.2.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
@@ -36,11 +37,11 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-ExtraBold.ttf
-          weight: 900
-        - asset: assets/fonts/Poppins-Bold.ttf
           weight: 800
-        - asset: assets/fonts/Poppins-SemiBold.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Poppins-Medium.ttf
           weight: 500
         - asset: assets/fonts/Poppins-Regular.ttf
