Create dashboard and other pages.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   go_router: ^15.2.4
   flutter_svg: ^2.2.0
   fluttertoast: ^8.2.12
+  fl_chart: ^1.0.0
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
