Added custom package for animated tabbar.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   fluttertoast: ^8.2.12
   fl_chart: ^1.0.0
   percent_indicator: ^4.2.5
+  animated_navbar:
+    path: packages/animated_navbar
+    
 
 dev_dependencies:
   flutter_test:
