--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   fluttertoast: ^8.2.12
   fl_chart: ^1.0.0
   percent_indicator: ^4.2.5
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
